--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     name: kh-accounting-software
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 120
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 120 --preload
     envVars:
       - key: FLASK_ENV
         value: production
